Add ability to update existing orders (#7)
